# eth-tx-explorer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
src/: config.py  eth_client.py  main.py
src/eth_tx_explorer/: __init__.py  __main__.py  cli.bak:p  cli.py  cli.py.argparse  core.py  eth_api.py  formatters.py  main.py  repl_helper.py  rpc.py
tests/: conftest.py  test_core.py  test_dummy.py  test_formatters.py
